# OOPS

./: CMakeLists.txt  README.md  oopsconfig.h
AdaptiveTest/: CMakeLists.txt
AdaptiveTest/include/: wave.h  waveparameters.h  waveparser.h
AdaptiveTest/pars/: wave.par
AdaptiveTest/scripts/: wave.json
AdaptiveTest/src/: main.cpp  wave.cpp  waveparser.cpp
FieldTest/: CMakeLists.txt
FieldTest/include/: constraintwave.h  fieldtestparameters.h  fieldtestparser.h
FieldTest/scripts/: fieldtest.json
FieldTest/src/: constraintwave.cpp  fieldtestparser.cpp  main.cpp
MultiGrid/: CMakeLists.txt
MultiGrid/include/: firstorderwave.h  waveparameters.h  waveparser.h
MultiGrid/pars/: wave.par
MultiGrid/scripts/: wave.json
MultiGrid/src/: firstorderwave.cpp  multiGridTest.cpp  waveparser.cpp
fluid/include/: minmod.h  norecon.h  reconstruction.h
fluid/src/: fluidmain.cpp  minmod.cpp  norecon.cpp  reconstruction.cpp
include/: .operators.h.swo  cubic.h  cubicinterpolator.h  domain.h  fieldmap.h  grid.h  grid.h.in  interpolator.h  ode.h  odedata.h  oopsconfig.h.in  operators.h  output.h  parameters.h  paramparser.h  paramreader.h  polynomialinterpolator.h  rk4.h  rkck.h  solver.h  solverdata.h  types.h
scripts/: genParams.py  plotData.py  test.json
src/: cubic.cpp  cubicinterpolator.cpp  domain.cpp  fieldmap.cpp  grid.cpp  interpolator.cpp  ode.cpp  odedata.cpp  output.cpp  paramreader.cpp  polynomialinterpolator.cpp  rk4.cpp  rkck.cpp  solverdata.cpp
tests/: .waveTest.cpp.swo  CMakeLists.txt  domainTest.cpp  gridTest.cpp  heatTest.cpp  paramTest.cpp  rkTest.cpp  waveTest.cpp
